--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+
 # dependencies
 /node_modules
 /.pnp
@@ -23,3 +25,5 @@ notes.txt
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+firebase.js
