--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cleanup": "prettier-standard --write"
+    "cleanup": "prettier-standard --write",
+    "emulators": "cd functions/ && firebase emulators:start"
   },
   "eslintConfig": {
     "extends": [
